# brace-rs

./: Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  azure-pipelines.yml  config.toml  rustfmt.toml  rusty-hook.toml
charts/brace/: Chart.yaml  values.yaml
charts/brace/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
charts/brace/templates/tests/: test-connection.yaml
ci/: job-cargo-build.yml  job-cargo-check.yml  job-cargo-lint.yml  job-cargo-test.yml  job-cross-build.yml  job-docker-push.yml  job-helm-package.yml  step-install-rust.yml
ci/azure-pipelines/: job-cross-build.yml  job-docker-push.yml  job-helm-chart.yml  job-rust-check.yml  job-rust-lint.yml  job-rust-test.yml  job-rust-version.yml  step-cross-install.yml  step-rust-install.yml
ci/jobs/: docker-push.yml  helm-chart.yml  rust-build.yml  rust-check.yml  rust-cross-build.yml  rust-lint.yml  rust-test.yml
ci/stages/: build.yml  lint.yml  release.yml  test.yml
ci/steps/: install-cross.yml  install-rust.yml
crates/brace/: Cargo.toml
crates/brace-cli/: Cargo.toml
crates/brace-cli/src/lib/: lib.rs
crates/brace-cli/src/lib/shell/: mod.rs
crates/brace-config/: Cargo.toml
crates/brace-config/src/lib/: config.rs  file.rs  lib.rs  load.rs  macros.rs  save.rs
crates/brace-config/src/lib/value/: array.rs  de.rs  entry.rs  mod.rs  ser.rs  table.rs
crates/brace-db/: Cargo.toml
crates/brace-db/src/lib/: config.rs  lib.rs
crates/brace-db/tests/: integration.rs
crates/brace-theme/: Cargo.toml
crates/brace-theme/src/lib/: config.rs  lib.rs  manifest.rs  resource.rs
crates/brace-theme/src/lib/cli/: init.rs  mod.rs
crates/brace-theme/src/lib/renderer/: config.rs  mod.rs
crates/brace-theme/tests/: integration.rs  theme.rs
crates/brace-web/: Cargo.toml
crates/brace-web-auth/: Cargo.toml
crates/brace-web-auth/src/lib/: lib.rs  model.rs  util.rs
crates/brace-web-auth/src/lib/action/: create.rs  delete.rs  install.rs  list.rs  locate.rs  mod.rs  retrieve.rs  uninstall.rs  update.rs
crates/brace-web-auth/src/lib/form/: create.rs  login.rs  mod.rs  update.rs  user.rs
crates/brace-web-auth/src/lib/route/api/: auth.rs  create.rs  delete.rs  list.rs  mod.rs  retrieve.rs  update.rs
crates/brace-web-auth/src/lib/route/web/: create.rs  delete.rs  list.rs  login.rs  logout.rs  mod.rs  retrieve.rs  update.rs
crates/brace-web-auth/tests/: action.rs  route.rs
crates/brace-web-form/: Cargo.toml
crates/brace-web-form/src/lib/: action.rs  builder.rs  data.rs  extractor.rs  field.rs  form.rs  lib.rs  state.rs
crates/brace-web-page/: Cargo.toml
crates/brace-web-page/src/lib/: lib.rs  model.rs  router.rs
crates/brace-web-page/src/lib/action/: create.rs  delete.rs  install.rs  list.rs  locate.rs  mod.rs  retrieve.rs  retrieve_path.rs  uninstall.rs  update.rs
crates/brace-web-page/src/lib/form/: create.rs  page.rs  update.rs
crates/brace-web-page/src/lib/route/: create.rs  mod.rs
crates/brace-web-page/src/lib/route/api/: create.rs  delete.rs  list.rs  mod.rs  retrieve.rs  update.rs
crates/brace-web-page/src/lib/route/web/: create.rs  delete.rs  list.rs  locate.rs  mod.rs  retrieve.rs  update.rs
crates/brace-web-page/tests/: action.rs  route.rs
crates/brace-web/src/lib/: config.rs  lib.rs  logger.rs  redirect.rs
crates/brace-web/src/lib/cli/: mod.rs  run.rs
crates/brace-web/src/lib/extract/: form.rs  mod.rs  query.rs
crates/brace-web/src/lib/parse/: mod.rs  url_encoded.rs
crates/brace-web/src/lib/render/: config.rs  mod.rs  template.rs
crates/brace-web/src/lib/route/: index.rs  mod.rs  resources.rs  themes.rs
crates/brace-web/tests/: integration.rs  render.rs
crates/brace/src/lib/: config.rs  lib.rs  logger.rs  state.rs
crates/brace/src/lib/cli/: mod.rs
crates/brace/src/lib/cli/web/: init.rs  run.rs
crates/brace/src/lib/route/: index.rs  resources.rs  themes.rs
crates/brace/tests/: cli.rs  web.rs
docker/alpine/: Dockerfile
src/: config.rs  init.rs  main.rs  web.rs
src/commands/: init.rs  mod.rs  web.rs
src/commands/web/: run.rs
src/lib/: config.rs  lib.rs
src/lib/app/: config.rs  init.rs  mod.rs  state.rs  web.rs
src/lib/app/config/: db.rs  log.rs  mod.rs  web.rs
src/lib/app/database/: config.rs  mod.rs
src/lib/app/renderer/: config.rs  mod.rs  template.rs
src/lib/app/theme/: config.rs  library.rs  manifest.rs  mod.rs  template.rs
src/lib/app/web/: config.rs  mod.rs
src/lib/app/web/route/: assets.rs  index.rs  mod.rs  resources.rs  themes.rs
src/lib/cli/: init.rs  mod.rs  web.rs
src/lib/cli/theme/: init.rs  mod.rs
src/lib/cli/web/: run.rs
src/lib/commands/: init.rs  web.rs
src/lib/config/: mod.rs  render.rs
src/lib/util/: command.rs  config.rs  db.rs  log.rs  mod.rs  path.rs  render.rs  shell.rs
src/lib/util/shell/: command.rs  mod.rs
src/util/: mod.rs  shell.rs
src/web/: config.rs  mod.rs
templates/: index.html
tests/: cli.rs  db.rs  render.rs  theme.rs  web.rs
themes/default/: Theme.toml  manifest.toml  theme.toml
themes/default/css/: form.css  theme.css
themes/default/templates/: asset.html  layout.html  page-delete-form.html  page-form.html  page-list.html  page.html  themes.html
themes/default/templates/auth/: login-form.html  logout-form.html
themes/default/templates/form/: form-confirm.html  form-layout.html  form.html
themes/default/templates/form/action/: action--cancel.html  action--submit.html  action.html
themes/default/templates/form/field/: field--datetime.html  field--email.html  field--hidden.html  field--password.html  field--select.html  field--text.html  field--textarea.html  field.html
themes/default/templates/page/: page-delete-form.html  page-form.html  page-list.html  page.html
themes/default/templates/user/: user-delete-form.html  user-form.html  user-list.html  user.html
