[package]
name = "brace"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "A content management system built with the rust programming language."
edition = "2018"
homepage = "https://github.com/brace-rs/brace"
repository = "https://github.com/brace-rs/brace"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
actix = "0.7"
actix-web = "0.7"
atty = "0.2"
clap = "2.32"
env_logger = "0.6"
failure = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
termcolor = "1.0"
toml = "0.5"

[dev-dependencies]
assert_cmd = "0.11"
reqwest = "0.9"
tempfile = "3.0"
