[package]
name = "brace-config"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "The config component of the brace project."
edition = "2018"
homepage = "https://github.com/brace-rs/brace"
repository = "https://github.com/brace-rs/brace"
license = "MIT OR Apache-2.0"

[lib]
name = "brace_config"
path = "src/lib/lib.rs"

[dependencies]
failure = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.5"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
