[package]
name = "brace-web-form"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "The web form component of the brace project."
edition = "2018"
homepage = "https://github.com/brace-rs/brace"
repository = "https://github.com/brace-rs/brace"
license = "MIT OR Apache-2.0"

[lib]
name = "brace_web_form"
path = "src/lib/lib.rs"

[dependencies]
actix-http = "0.2"
actix-web = "1.0.3"
bytes = "0.4"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
failure = "0.1"
futures = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.5"
