[package]
name = "brace-web-page"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "The web page component of the brace project."
edition = "2018"
homepage = "https://github.com/brace-rs/brace"
repository = "https://github.com/brace-rs/brace"
license = "MIT OR Apache-2.0"

[lib]
name = "brace_web_page"
path = "src/lib/lib.rs"

[dependencies]
actix = "0.8"
actix-service = "0.4"
actix-web = "1.0.3"
brace-db = { path = "../brace-db" }
brace-theme = { path = "../brace-theme" }
brace-web = { path = "../brace-web" }
brace-web-auth = { path = "../brace-web-auth" }
brace-web-form = { path = "../brace-web-form" }
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
futures = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.5", features = ["serde", "v4"] }

[dev-dependencies]
actix-http = { version = "0.2" }
actix-http-test = { version = "0.2" }
