[package]
name = "brace"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "A content management system built with the rust programming language."
edition = "2018"
homepage = "https://github.com/brace-rs/brace"
repository = "https://github.com/brace-rs/brace"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
name = "brace"
path = "src/lib/lib.rs"

[dependencies]
brace-cli = { path = "../brace-cli" }
brace-db = { path = "../brace-db" }
brace-theme = { path = "../brace-theme" }
brace-web = { path = "../brace-web" }

[dev-dependencies]
assert_cmd = "0.11"
tempfile = "3.0"

[[bin]]
name = "brace"
test = false
doc = false
