[package]
name = "brace"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "A content management system built with the rust programming language."
edition = "2018"
homepage = "https://github.com/brace-rs/brace"
repository = "https://github.com/brace-rs/brace"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
name = "brace"
path = "src/lib/lib.rs"

[dependencies]
actix = "0.8"
actix-files = "0.1"
actix-identity = "0.1"
actix-service = "0.4"
actix-web = "1.0.3"
brace-cli = { path = "../brace-cli" }
brace-config = { path = "../brace-config" }
brace-db = { path = "../brace-db" }
brace-theme = { path = "../brace-theme" }
brace-web = { path = "../brace-web" }
brace-web-auth = { path = "../brace-web-auth" }
brace-web-page = { path = "../brace-web-page" }
chrono = "0.4"
failure = "0.1"
fern = "0.5"
futures = "0.1"
log = "0.4"
path-absolutize = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

[dev-dependencies]
assert_cmd = "0.11"
reqwest = "0.9"
tempfile = "3.0"

[[bin]]
name = "brace"
test = false
doc = false
